--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                 </div>
                 <div class="pl-md-4 col-md-9">
                     <h6 class="title">Mudit Kothari</h6>
-                    <p class="subtitle">UI/UX Designer</p>
+                    <p class="subtitle">Machine learning</p>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident, pariatur, aperiam aut autem voluptas odit. Odio ducimus delectus totam sed aliquam sequi praesentium mollitia, illum repudiandae quidem quod, magni magnam.</p>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim, eius, nam. Quo praesentium qui temporibus voluptatum, facilis aliquid eligendi fugiat beatae neque inventore non. Laborum repellendus consequatur ullam voluptatum asperiores.</p>
                     <button class="btn btn-primary rounded mt-3">DOWNLOAD CV</button>                   
